Anonymous | Login | 2021-01-18 07:50 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0024418 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2013-11-29 11:21 | 2019-09-04 12:12 | ||||||||
Reporter | emv | ||||||||||||
Assigned To | msv | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 6.6.0 | ||||||||||||
Target Version | [OCCT] Unscheduled | Fixed in Version | |||||||||||
Summary | 0024418: Modeling Algorithms - Wrong section curves when intersecting analytical surfaces | ||||||||||||
Description | The intersection algorithm produces wrong section curves in the following test cases: boolean bfuse_complex E6, F8 bugs modalg_2 bug20964_* draft angle F9 | ||||||||||||
Steps To Reproduce | 1. test bugs modalg_2 bug20964_1 brestore [locate_data_file OCC20964_revsolid.brep] b1 brestore [locate_data_file OCC20964_sphere.brep] b2 explode b1 f; copy b1_7 b1 explode b2 f; copy b2_1 b2 mksurface s1 b1 mksurface s2 b2 trimv s1t s1 0 230.14184397163115 # Sphere + Cylinder intersect ii s1t s2 # 3 curves bounds ii_2 u1 u2 xdistcs ii_2 s1 u1 u2 10 2.0e-7 # Max distance = 3.2632852455436544e-006 xdistcs ii_2 s2 u1 u2 10 2.0e-7 # Max distance = 0.01375619471412208 2. test draft angle F9 ptorus b1 25 24 90 plane p 20 20 10 0 0 1 pcone b2 p 10 8 40 explode b1 f; copy b1_1 b1 explode b2 f; copy b2_1 b2 mksurface s1 b1 mksurface s2 b2 trimu s1t s1 0 1.5707963267948966 trimv s2t s2 0 40.049968789001575 intersect ii s1t s2t bounds ii_1 u1 u2 xdistcs ii_1 s1 u1 u2 10 2.0e-7 # Max distance = 4.0530416013101348e-006 xdistcs ii_1 s2 u1 u2 10 2.0e-7 # Max distance = 1.7347713433437292e-005 3. Test case bugs modalg_5 bug25715_3 | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | bugs modalg_7 bug24418_1, bug24418_2 | ||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|||||||||||||||||||||||||||||||||||||
|
![]() |
|
(0036091) nbv (developer) 2015-01-15 11:49 |
Dear msv. I think, it is better for us to fix in this bugs some problems with ANALYTICAL intersection only. Therefore, it is not worth bug # 25416 being related to this |
(0064281) nbv (developer) 2017-03-13 17:05 |
Steps To Reproduce has been updated according to its behavior on the current state of OCCT developer version. |
(0071931) mkv (tester) 2017-11-02 12:24 |
Problem is reproduced on the current master. |
![]() |
|||
Date Modified | Username | Field | Change |
2013-11-29 11:21 | emv | New Issue | |
2013-11-29 11:21 | emv | Assigned To | => nbv |
2013-11-29 11:27 | emv | Status | new => assigned |
2013-11-29 11:27 | emv | Description Updated | View Revisions |
2013-11-29 11:27 | emv | Steps to Reproduce Updated | View Revisions |
2013-11-29 11:27 | emv | Relationship added | child of 0024094 |
2013-11-29 11:28 | emv | Relationship added | related to 0024299 |
2013-12-02 15:11 | emv | Relationship added | related to 0024427 |
2014-05-28 17:20 | nbv | Relationship added | related to 0024915 |
2014-09-12 13:01 | abv | Target Version | => 7.1.0 |
2014-10-21 11:14 | nbv | Relationship added | related to 0025404 |
2014-12-22 12:07 | emv | Steps to Reproduce Updated | View Revisions |
2014-12-22 12:08 | emv | File Added: 001.png | |
2015-01-15 11:23 | emv | Relationship added | related to 0025709 |
2015-01-15 11:32 | msv | Relationship added | related to 0025416 |
2015-01-15 11:33 | nbv | Summary | Wrong section curves => Wrong section curves when intersecting analytical surfaces |
2015-01-15 11:49 | nbv | Note Added: 0036091 | |
2015-01-15 11:49 | nbv | Relationship deleted | related to 0025416 |
2015-01-21 15:25 | nbv | Relationship added | related to 0025715 |
2015-01-28 09:33 | nbv | Steps to Reproduce Updated | View Revisions |
2015-07-16 09:23 | nbv | Relationship added | related to 0025542 |
2016-10-25 19:04 | msv | Target Version | 7.1.0 => 7.2.0 |
2017-03-02 15:31 | nbv | Relationship added | related to 0028503 |
2017-03-13 17:05 | nbv | Note Added: 0064281 | |
2017-03-13 17:05 | nbv | Steps to Reproduce Updated | View Revisions |
2017-07-24 09:22 | msv | Target Version | 7.2.0 => 7.3.0 |
2017-11-02 12:24 | mkv | Test case number | => bugs modalg_7 bug24418_1, bug24418_2 |
2017-11-02 12:24 | mkv | Note Added: 0071931 | |
2017-12-05 17:08 | msv | Target Version | 7.3.0 => 7.4.0 |
2018-06-19 13:10 | nbv | Relationship added | related to 0024772 |
2018-06-20 14:05 | nbv | Relationship deleted | related to 0028503 |
2018-07-09 10:50 | nbv | Steps to Reproduce Updated | View Revisions |
2018-11-02 10:28 | nbv | Relationship added | related to 0025956 |
2019-08-12 19:08 | msv | Assigned To | nbv => msv |
2019-08-12 19:11 | msv | Target Version | 7.4.0 => Unscheduled |
2019-09-04 12:12 | kgv | Summary | Wrong section curves when intersecting analytical surfaces => Modeling Algorithms - Wrong section curves when intersecting analytical surfaces |
Copyright © 2000 - 2021 MantisBT Team |