0024418: Modeling Algorithms - Wrong section curves when intersecting analytical surfaces

IntPatch_ALineToWLine.cxx - setting minimal number of points in a WLine depending on step size
IntPatch_WLineTool.cxx - fix WLines connecting check condition
test cases has been changed according to new behavior